--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,6 @@ api-version: 1.18
 
 # Data
 load: STARTUP
-main: org.conquestmc.eco.ConquestEco
+main: org.conquestmc.ConquestEconomy
 loadbefore: [Towny]
 depend: [Vault, ItemsAdder]
