Add full vault support for town banking

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -62,6 +62,7 @@ messages:
   help-withdraw: 'You need to specify how much gold you want to withdraw! Usage: /bank withdraw <gold | all>'
   warning-update: 'You are using an outdated version of the plugin. Please update to the latest version.'
   warning-drops: 'Items that didn''t fit into your inventory were dropped!'
+  warning-drops-bank: 'Items that didn''t fit into the bank were dropped at your location!'
   error-bankplot: 'You have to be on a Bank Plot to use this command!'
   error-noplayer: 'No player found!'
   error-zero: 'You can''t withdraw or deposit 0 gold!'
@@ -69,6 +70,10 @@ messages:
   error-notenough: 'You don''t have enough gold!'
   error-payyourself: 'You cannot send money to yourself!'
   error-notenoughmoneywithdraw: 'You can''t withdraw more than you have!'
+  error-no-bank-chests: 'No bank chests found!'
+  bank-no-space: 'All bank chests are full!'
   bank-chest-placed: 'Successfully placed bank chest! You are now able to store gold within it using <yellow>/townbank deposit'
   bank-chest-broken: 'Bank chest removed... All gold stored within it was removed from the town bank'
   cannot-manipulate-chest: 'You cannot take or remove items from a Bank Chest! Please use /t deposit or /t withdraw to manage your balance!'
+  bank-withdrawn: 'Withdrew <amount>⛃ from your town bank!'
+  bank-deposited: 'Deposited <amount>⛃ to your town bank!'
